# MyGarden

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
mygarden/: admin.py  apps.py  models.py  tests.py
mygarden/migrations/: 0001_initial.py
plantinfos/: admin.py  apps.py  models.py
plantinfos/migrations/: 0001_initial.py
settings/: settings.py
