[tool.poetry]
name = "mygarden"
version = "0.1.0"
description = "Garden management"
authors = ["Fred C <42280769+hypsug0@users.noreply.github.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.5"
python-decouple = "^3.7"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
pylint = "^2.15.10"
django-stubs = { extras = ["compatible-mypy"], version = "^1.14.0" }
djangorestframework-stubs = { extras = ["compatible-mypy"], version = "^1.8.0" }
isort = "^5.12.0"


[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true


[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "myproject.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
